--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-    <display-name>eShop</display-name>
+    <display-name>Shop</display-name>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
