部署至腾讯云

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -4,4 +4,6 @@ jdbc.password=666666
 
 jdbc.driverClass=com.mysql.jdbc.Driver
 
-jdbc.jdbcUrl=jdbc:mysql://127.0.0.1:3306/yshop?useUnicode=true&characterEncoding=UTF-8
+jdbc.jdbcUrl=jdbc:mysql://139.199.224.229:3306/yshop?useUnicode=true&characterEncoding=UTF-8
+
+#jdbc.jdbcUrl=jdbc:mysql://localhost:3306/yshop?useUnicode=true&characterEncoding=UTF-8c
