--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -4,6 +4,6 @@ jdbc.password=666666
 
 jdbc.driverClass=com.mysql.jdbc.Driver
 
-jdbc.jdbcUrl=jdbc:mysql://139.199.224.229:3306/yshop?useUnicode=true&characterEncoding=UTF-8
+#jdbc.jdbcUrl=jdbc:mysql://139.199.224.229:3306/yshop?useUnicode=true&characterEncoding=UTF-8
 
-#jdbc.jdbcUrl=jdbc:mysql://localhost:3306/yshop?useUnicode=true&characterEncoding=UTF-8c
+jdbc.jdbcUrl=jdbc:mysql://localhost:3306/yshop?useUnicode=true&characterEncoding=UTF-8
