--- a/pom.xml
+++ b/pom.xml
@@ -200,5 +200,19 @@
 
     </dependencies>
 
-
+    <build>
+        <finalName>xxx</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    
 </project>
